@@ -1,31 +1,23 @@
 package datawave.query.postprocessing.tf;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.SortedSet;
-
+import com.google.common.collect.HashMultimap;
+import com.google.common.collect.Maps;
+import com.google.common.collect.Multimap;
+import com.google.common.collect.Sets;
+import com.google.common.collect.TreeMultimap;
+import com.google.protobuf.InvalidProtocolBufferException;
 import datawave.core.iterators.TermFrequencyIterator;
 import datawave.data.type.NoOpType;
 import datawave.data.type.Type;
 import datawave.ingest.protobuf.TermWeight;
 import datawave.ingest.protobuf.TermWeightPosition;
+import datawave.query.data.parsers.TermFrequencyKey;
 import datawave.query.jexl.functions.TermFrequencyList;
 import datawave.query.predicate.EventDataQueryFilter;
 import datawave.query.Constants;
 import datawave.query.attributes.Content;
 import datawave.query.attributes.Document;
-import datawave.query.jexl.functions.ContentFunctions;
 import datawave.query.jexl.visitors.LiteralNodeSubsetVisitor;
-
-import datawave.util.StringUtils;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.PartialKey;
 import org.apache.accumulo.core.data.Range;
@@ -37,15 +29,25 @@ import org.apache.commons.jexl2.parser.ParseException;
 import org.apache.hadoop.io.Text;
 import org.apache.log4j.Logger;
 
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.Maps;
-import com.google.common.collect.Multimap;
-import com.google.common.collect.Multimaps;
-import com.google.common.collect.Sets;
-import com.google.common.collect.TreeMultimap;
-import com.google.protobuf.InvalidProtocolBufferException;
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+import java.util.SortedSet;
 
 import static datawave.query.Constants.TERM_FREQUENCY_COLUMN_FAMILY;
+import static datawave.query.jexl.functions.ContentFunctions.CONTENT_ADJACENT_FUNCTION_NAME;
+import static datawave.query.jexl.functions.ContentFunctions.CONTENT_FUNCTION_NAMESPACE;
+import static datawave.query.jexl.functions.ContentFunctions.CONTENT_PHRASE_FUNCTION_NAME;
+import static datawave.query.jexl.functions.ContentFunctions.CONTENT_SCORED_PHRASE_FUNCTION_NAME;
+import static datawave.query.jexl.functions.ContentFunctions.CONTENT_WITHIN_FUNCTION_NAME;
 
 public class TermOffsetPopulator {
     private static final Logger log = Logger.getLogger(TermOffsetPopulator.class);
@@ -54,10 +56,10 @@ public class TermOffsetPopulator {
     
     static {
         Set<String> _phraseFunctions = Sets.newHashSet();
-        _phraseFunctions.add(ContentFunctions.CONTENT_WITHIN_FUNCTION_NAME);
-        _phraseFunctions.add(ContentFunctions.CONTENT_ADJACENT_FUNCTION_NAME);
-        _phraseFunctions.add(ContentFunctions.CONTENT_PHRASE_FUNCTION_NAME);
-        _phraseFunctions.add(ContentFunctions.CONTENT_SCORED_PHRASE_FUNCTION_NAME);
+        _phraseFunctions.add(CONTENT_WITHIN_FUNCTION_NAME);
+        _phraseFunctions.add(CONTENT_ADJACENT_FUNCTION_NAME);
+        _phraseFunctions.add(CONTENT_PHRASE_FUNCTION_NAME);
+        _phraseFunctions.add(CONTENT_SCORED_PHRASE_FUNCTION_NAME);
         phraseFunctions = Collections.unmodifiableSet(_phraseFunctions);
     }
     
@@ -67,12 +69,14 @@ public class TermOffsetPopulator {
     private Document document;
     private Set<String> contentExpansionFields;
     
-    public TermOffsetPopulator(Multimap<String,String> termFrequencyFieldValues, Set<String> contentExpansionFields, EventDataQueryFilter evaluationFilter,
-                    SortedKeyValueIterator<Key,Value> source) {
+    private final TermFrequencyConfig config;
+    
+    public TermOffsetPopulator(Multimap<String,String> termFrequencyFieldValues, TermFrequencyConfig config) {
         this.termFrequencyFieldValues = termFrequencyFieldValues;
-        this.contentExpansionFields = contentExpansionFields;
-        this.source = source;
-        this.evaluationFilter = evaluationFilter;
+        this.config = config;
+        this.contentExpansionFields = this.config.getContentExpansionFields();
+        this.source = this.config.getSource();
+        this.evaluationFilter = this.config.getEvaluationFilter();
     }
     
     public Document document() {
@@ -115,6 +119,11 @@ public class TermOffsetPopulator {
      * @return TermOffset map
      */
     public Map<String,Object> getContextMap(Key docKey, Set<Key> keys, Set<String> fields) {
+
+        if (keys.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
         document = new Document();
         
         TermFrequencyIterator tfSource;
@@ -131,11 +140,12 @@ public class TermOffsetPopulator {
                 log.error("Created a TFIter with no field values. Orig fields: " + termFrequencyFieldValues.keySet() + " fields to remove: " + fields);
             }
         }
+
         
         Range range = getRange(keys);
         try {
             tfSource.init(source, null, null);
-            tfSource.seek(getRange(keys), null, false);
+            tfSource.seek(range, null, false);
         } catch (IOException e) {
             log.error("Seek to the range failed: " + range, e);
         }
@@ -144,34 +154,28 @@ public class TermOffsetPopulator {
         if (evaluationFilter != null) {
             evaluationFilter.startNewDocument(docKey);
         }
-        
+
+        TermFrequencyKey parser = new TermFrequencyKey();
+        TermWeightPosition.Builder position = new TermWeightPosition.Builder();
         Map<String,TermFrequencyList> termOffsetMap = Maps.newHashMap();
-        
+
         while (tfSource.hasTop()) {
             Key key = tfSource.getTopKey();
-            FieldValue fv = FieldValue.getFieldValue(key);
+            parser.parse(key);
             
-            // add the zone and term to our internal document
-            Content attr = new Content(fv.getValue(), source.getTopKey(), evaluationFilter == null || evaluationFilter.keep(key));
-            
-            // no need to apply the evaluation filter here as the TermFrequencyIterator above is already doing more filtering than we can do here.
-            // So this filter is simply extraneous. However if the an EventDataQueryFilter implementation gets smarter somehow, then it can be added back in
-            // here.
-            // For example the AncestorQueryLogic may require this....
-            // if (evaluationFilter == null || evaluationFilter.apply(Maps.immutableEntry(key, StringUtils.EMPTY_STRING))) {
-            
-            this.document.put(fv.getField(), attr);
+            // add the zone and term to our internal document.
+            Content attr = new Content(parser.getValue(), source.getTopKey(), evaluationFilter == null || evaluationFilter.keep(key));
+
+            this.document.put(parser.getField(), attr);
             
             TreeMultimap<TermFrequencyList.Zone,TermWeightPosition> offsets = TreeMultimap.create();
             try {
                 TermWeight.Info twInfo = TermWeight.Info.parseFrom(tfSource.getTopValue().get());
                 
                 // if no content expansion fields then assume every field is permitted for unfielded content functions
-                TermFrequencyList.Zone twZone = new TermFrequencyList.Zone(fv.getField(),
-                                (contentExpansionFields == null || contentExpansionFields.isEmpty() || contentExpansionFields.contains(fv.getField())),
-                                TermFrequencyList.getEventId(key));
-                
-                TermWeightPosition.Builder position = new TermWeightPosition.Builder();
+                boolean isContentExpansionField = contentExpansionFields == null || contentExpansionFields.isEmpty() || contentExpansionFields.contains(parser.getField());
+                TermFrequencyList.Zone twZone = new TermFrequencyList.Zone(parser.getField(), isContentExpansionField, TermFrequencyList.getEventId(key));
+
                 for (int i = 0; i < twInfo.getTermOffsetCount(); i++) {
                     position.setTermWeightOffsetInfo(twInfo, i);
                     offsets.put(twZone, position.build());
@@ -180,14 +184,13 @@ public class TermOffsetPopulator {
                 
             } catch (InvalidProtocolBufferException e) {
                 log.error("Could not deserialize TermWeight protocol buffer for: " + source.getTopKey());
-                
-                return null;
+                return Collections.emptyMap();
             }
             
             // First time looking up this term in a field
-            TermFrequencyList tfl = termOffsetMap.get(fv.getValue());
+            TermFrequencyList tfl = termOffsetMap.get(parser.getValue());
             if (null == tfl) {
-                termOffsetMap.put(fv.getValue(), new TermFrequencyList(offsets));
+                termOffsetMap.put(parser.getValue(), new TermFrequencyList(offsets));
             } else {
                 // Merge in the offsets for the current field+term with all previous
                 // offsets from other fields in the same term
@@ -205,7 +208,6 @@ public class TermOffsetPopulator {
         // Load the actual map into map that will be put into the JexlContext
         Map<String,Object> map = new HashMap<>();
         map.put(Constants.TERM_OFFSET_MAP_JEXL_VARIABLE_NAME, new TermOffsetMap(termOffsetMap));
-        
         return map;
     }
     
@@ -231,17 +233,12 @@ public class TermOffsetPopulator {
     /**
      * Finds all the content functions and returns a map indexed by function name to the function.
      * 
-     * @param query
-     *            the query node
+     * @param node
+     *            a JexlNode
      * @return a map indexed by function name to the function
      */
-    public static Multimap<String,Function> getContentFunctions(JexlNode query) {
-        FunctionReferenceVisitor visitor = new FunctionReferenceVisitor();
-        query.jjtAccept(visitor, null);
-        
-        Multimap<String,Function> functionsInNamespace = Multimaps.index(visitor.functions().get(ContentFunctions.CONTENT_FUNCTION_NAMESPACE), Function::name);
-        
-        return Multimaps.filterKeys(functionsInNamespace, TermOffsetPopulator::isContentFunctionTerm);
+    public static Multimap<String,Function> getContentFunctions(JexlNode node) {
+        return FunctionReferenceVisitor.functions(node, Collections.singleton(CONTENT_FUNCTION_NAMESPACE));
     }
     
     /**
@@ -319,8 +316,8 @@ public class TermOffsetPopulator {
                 // If we don't have an instance of the dataType, make one and put it
                 // in the cache
                 try {
-                    dataTypeInstance = dataTypeClass.newInstance();
-                } catch (InstantiationException e) {
+                    dataTypeInstance = dataTypeClass.getDeclaredConstructor().newInstance();
+                } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                     log.error("Could not instantiate dataType class: " + dataTypeClass);
                     continue;
                 } catch (IllegalAccessException e) {
@@ -396,131 +393,5 @@ public class TermOffsetPopulator {
             }
         }
         return termFrequencyFieldValues;
-    }
-    
-    /**
-     * A field name and value which is sorted on {@code <value>\0<name>}
-     */
-    public static class FieldValue implements Comparable<FieldValue> {
-        private int nullOffset;
-        private String valueField;
-        
-        public FieldValue(String field, String value) {
-            this.nullOffset = value.length();
-            this.valueField = value + '\0' + field;
-        }
-        
-        /**
-         * A distance between this field value and another. Here we want a distance that correlates with the number of keys between here and there for the same.
-         * Essentially we want the inverse of the number of bytes that match. document.
-         *
-         * @param fv
-         *            a field value
-         * @return a distance between here and there (negative means there is before here)
-         */
-        public double distance(FieldValue fv) {
-            byte[] s1 = getValueField().getBytes();
-            byte[] s2 = fv.getValueField().getBytes();
-            int len = Math.min(s1.length, s2.length);
-            
-            int matches = 0;
-            int lastCharDiff = 0;
-            
-            for (int i = 0; i <= len; i++) {
-                lastCharDiff = getValue(s2, i) - getValue(s1, i);
-                if (lastCharDiff == 0) {
-                    matches++;
-                } else {
-                    break;
-                }
-            }
-            
-            return Math.copySign(1.0d / (matches + 1), lastCharDiff);
-        }
-        
-        private int getValue(byte[] bytes, int index) {
-            if (index >= bytes.length) {
-                return 0;
-            } else {
-                return bytes[index];
-            }
-        }
-        
-        public String getValueField() {
-            return valueField;
-        }
-        
-        public String getField() {
-            return valueField.substring(nullOffset + 1);
-        }
-        
-        public String getValue() {
-            return valueField.substring(0, nullOffset);
-        }
-        
-        @Override
-        public int compareTo(FieldValue o) {
-            return valueField.compareTo(o.valueField);
-        }
-        
-        @Override
-        public int hashCode() {
-            return valueField.hashCode();
-        }
-        
-        @Override
-        public boolean equals(Object obj) {
-            if (obj instanceof FieldValue) {
-                return valueField.equals(((FieldValue) obj).valueField);
-            }
-            return false;
-        }
-        
-        @Override
-        public String toString() {
-            return getField() + " -> " + getValue();
-        }
-        
-        public static FieldValue getFieldValue(Key key) {
-            return getFieldValue(key.getColumnQualifier());
-        }
-        
-        public static FieldValue getFieldValue(Text cqText) {
-            if (cqText == null) {
-                return null;
-            }
-            return getFieldValue(cqText.toString());
-        }
-        
-        public static FieldValue getFieldValue(String cq) {
-            if (cq == null) {
-                return null;
-            }
-            
-            // pull apart the cq
-            String[] cqParts = StringUtils.split(cq, '\0');
-            
-            // if we do not even have the first datatype\0uid, then lets find it
-            if (cqParts.length <= 2) {
-                return null;
-            }
-            
-            // get the value and field
-            String value = "";
-            String field = "";
-            if (cqParts.length >= 4) {
-                field = cqParts[cqParts.length - 1];
-                value = cqParts[2];
-                // in case the value had null characters therein
-                for (int i = 3; i < (cqParts.length - 1); i++) {
-                    value = value + '\0' + cqParts[i];
-                }
-            } else if (cqParts.length == 3) {
-                value = cqParts[2];
-            }
-            
-            return new FieldValue(field, value);
-        }
-        
     }
 }
